--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,32 @@
-h1{
+h1 {
     color: aqua;
     text-align: center;
 }
-.row{
+
+p {
+    color: blue;
+    text-align: center;
+}
+
+body {
+    background-color: rebeccapurple;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 50px;
+}
+
+li {
     display: flex;
+    flex-direction: column;
+    background-color: yellow;
+    border-radius: 25px;
+    align-items: center;
 }
-.column{
-    flex: 33.33%;
-    padding: 5px;
-}
+
+
