Assigned names, numbers, and desciptions.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,10 @@ h1 {
     color: aqua;
     text-align: center;
 }
-
+h4 {
+    color: aqua;
+    text-align: center;
+}
 p {
     color: blue;
     text-align: center;
