--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,11 +8,6 @@ h4 {
     text-align: center;
 }
 
-p {
-    color: blue;
-    text-align: center;
-}
-
 body {
     background-color: rebeccapurple;
 }
@@ -33,6 +28,7 @@ li {
     background-color: yellow;
     border-radius: 25px;
     align-items: center;
+    text-align: center;
 }
 
 #nameSearch {
@@ -77,4 +73,5 @@ li {
 
 #searchList{
     background-color: green;
+    color: white;
 }
